definitions/phpmyadmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pma
  namespace: pma
  labels:
    app: pma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pma
  template:
    metadata:
      labels:
        app: pma
    spec:
      containers:
        - name: pma
          image: phpmyadmin/phpmyadmin:latest
          resources:
            requests:
              cpu: "1"
              memory: "8Gi"
            limits:
              cpu: "1"
              memory: "8Gi"
          ports:
            - containerPort: 80
              name: pma
          volumeMounts:
            - name: pma-cfg
              mountPath: /etc/phpmyadmin/
            - name: pma-ssl
              mountPath: /etc/ssl/certs/
            - name: pma-disk
              mountPath: /var/www/html/files/
      volumes:
        - name: pma-cfg
          configMap:
            name: pma-cfg
            items:
              - key: config-inc
                path: config.inc.php
        - name: pma-ssl
          secret:
            secretName: pma-tls
            items:
              - key: ssl-masql-lhg-sm-giti-p01
                path: BaltimoreCyberTrustRoot.crt.pem
              - key: ssl-mysql-lhg-oneup-p01
                path: DigiCertGlobalRootCA.crt.pem
        - name: pma-disk
          persistentVolumeClaim:
            claimName: pma-disk
---
apiVersion: v1
kind: Service
metadata:
  name: pma
  namespace: pma
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: pma
  selector:
    app: pma
