definitions/phpmyadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: pma
  name: tls-pma-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "http-cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/enable-real-ip: "true"
    nginx.ingress.kubernetes.io/real-ip-header: "X-Real-IP"
    nginx.ingress.kubernetes.io/proxy-real-ip-path: "/proxy-real-ip"
spec:
  ingressClassName: nginx
  rules:
    - host: oneup.az.lhgroup.de
      http:
        paths:
          - path: /pma(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: pma
                port:
                  number: 80
  tls:
    - hosts:
        - oneup.az.lhgroup.de
      secretName: pma-tls
